fix: Remove extra padding of input placeholder in Chrome

--- a/src/elements/input.css
+++ b/src/elements/input.css
@@ -369,18 +369,6 @@ input {
 input::placeholder {
   color: var(--pico-form-element-placeholder-color);
   opacity: 1;
-  overflow: hidden;
-  pointer-events: none;
-  user-select: none;
-  scrollbar-width: none;
-  word-wrap: normal;
-  white-space: pre;
-  border: 0;
-  padding: inherit;
-  margin: 0;
-  text-decoration: inherit;
-  display: inline-block;
-  ime-mode: inherit;
 }
 
 input::selection {
